fix(pipeline): resolve unresolved compilation problems on String.formatted in map service